<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/drawer"
    android:layout_width="match_parent" android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <include android:id="@+id/toolbar_actionbar" layout="@layout/toolbar_default"
            android:layout_width="match_parent" android:layout_height="wrap_content" />

        <LinearLayout android:id="@+id/main_container" android:layout_width="match_parent"
            android:clickable="true" android:layout_height="match_parent" android:background="#eee"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scrollbarStyle="outsideInset"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/myPrimaryColor"
                        android:textSize="14sp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/grade_prepare_query_grade"
                        />
                    <Button
                        android:id="@+id/grade_prepare_current"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grade_prepare_query_grade"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/myPrimaryColor"
                        android:textSize="14sp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/grade_prepare_comment"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grade_prepare_year"/>
                    <EditText
                        android:id="@+id/grade_prepare_year_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/grade_prepare_year_hint"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grade_prepare_semester"/>
                    <EditText
                        android:id="@+id/grade_prepare_semester_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/grade_prepare_semester_hint"
                        />
                    <Button
                        android:id="@+id/grade_prepare_all"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grade_prepare_all_grade"/>
                    <Button
                        android:id="@+id/grade_prepare_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grade_prepare_year_grade"/>
                    <Button
                        android:id="@+id/grade_prepare_semester"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grade_prepare_semester_grade"/>
                    <Button
                        android:id="@+id/grade_prepare_static"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grade_prepare_static"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.DrawerLayout>